--- a/scikit-learn.ipynb
+++ b/scikit-learn.ipynb
@@ -7,7 +7,8 @@
     "# An introduction to machine learning with scikit-learn\n",
     "\n",
     "> **Section contents**\n",
-    ">\n",
+    "> _This is forked from Tanmayee Kamath_\n",
+    "\n",
     ">In this section, we introduce the machine learning vocabulary that we use throughout scikit-learn and > give a simple learning example."
    ]
   },
@@ -63,24 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/lib/python3.9/site-packages/scipy/linalg/special_matrices.py:845: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  if kind is 'lower':\n",
-      "/lib/python3.9/site-packages/scipy/linalg/special_matrices.py:847: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  elif kind is 'upper':\n",
-      "/lib/python3.9/site-packages/scipy/stats/_binned_statistic.py:469: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  if(statistic is not 'count' and Vlen != Dlen):\n",
-      "/lib/python3.9/site-packages/scipy/io/netcdf.py:738: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  if typecode is not 'c':\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import datasets\n",
     "iris = datasets.load_iris()\n",
@@ -98,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, ..., 8, 9, 8])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "digits.target"
    ]
@@ -218,23 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(C=100.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "    decision_function_shape='ovr', degree=3, gamma=0.001, kernel='rbf',\n",
-       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "    tol=0.001, verbose=False)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.fit(digits.data[:-1], digits.target[:-1])"
    ]
@@ -248,31 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([8])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.predict(digits.data[-1:])"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4f946df053fbf2b937619d3c5458e7af74262f9a954d8797ba0b27400bcafe06"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -286,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
