adding actual author

--- a/scikit-learn.ipynb
+++ b/scikit-learn.ipynb
@@ -5,11 +5,9 @@
    "metadata": {},
    "source": [
     "# An introduction to machine learning with scikit-learn\n",
+    "_This is forked from Tanmayee Kamath who forked it from Jonathan Carter_.\n",
     "\n",
-    "> **Section contents**\n",
-    "> _This is forked from Tanmayee Kamath_\n",
-    "\n",
-    ">In this section, we introduce the machine learning vocabulary that we use throughout scikit-learn and > give a simple learning example."
+    "Video tutorial [here](https://www.youtube.com/watch?v=QbbYj56s7HU&ab_channel=GitHub)"
    ]
   },
   {
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
